# diffscope-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
lib/: CMakeLists.txt
